add collections component in frontend
